--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.5",
     "discord.js": "^12.5.3",
     "express": "^4.17.1",
     "node-schedule": "^2.0.0",
